# ColorWars

./: Makefile  README.md  diff_tester.py  herramientas.txt  pasos.txt  todo.txt
ai-service/: .gitignore  Dockerfile  Makefile  README.MD  compose.yml  conftest.py  entrypoint.sh  pyproject.toml  pyrightconfig.json
ai-service/.run/: App.run.xml
ai-service/.zed/: settings.json
ai-service/src/: main.py
ai-service/src/agents/: minimax.py  random.py  random_agent.py
ai-service/src/agents/minimax/: alpha_beta_prune.py  vanilla.py
ai-service/src/agents/minimax_variants/: alpha_beta_prune.py  vanilla.py
ai-service/src/application/: predict_move.py
ai-service/src/core/: dtos.py  enums.py  factories.py  interfaces.py  types.py
ai-service/src/core/interfaces/: __init__.py  agent.py  engine.py  protocols.py
ai-service/src/engines/: mock_engine.py  python_naive.py
ai-service/src/exceptions/: TimeExpired.py
ai-service/test/: bridge_python.py
ai-service/test/ai-service/: Predict.bru
ai-service/test/benchmarks/: SearchStats.py  minimax_stats.py
ai-service/test/unit/agents/: test_minimax.py
ai-service/test/unit/engines/: bridge_python.py  test_board_stability.py  test_draw_condition.py  test_explosion_logic.py  test_first_round_rule.py  test_hash_integrity.py  test_manual_moves.py  test_rules.py  test_rules_validation.py  test_undo_victory.py  test_win_condition.py
docs/01-architecture/: 01-context.md  02-containers.md  03.1-components-ai-service.md  03.2-components-web-service.md  (+4 more)
web-service/: .gitignore  README.md  bridge_deno.ts  deno.json
(+41 files in other folders)
