[project]
name = "color-wars"
version = "1.0"
description = "Implementación de agentes de IA para jugar ColorWars"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]",
    "pydantic>=2.12.5",
    "pytest>=9.0.3",
]

[tool.uv]
package = false
[dependency-groups]
    dev = [
    "ruff",
    "pre-commit",
    ]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = ["src"]
